# ROB-514-Follower-Robot

./: README.md
aruco_follow/: package.xml  setup.cfg  setup.py
aruco_follow/aruco_follow/: aruco_detector.py  aruco_follower.py  aruco_generate.py
aruco_follower_cpp/: CMakeLists.txt  package.xml
aruco_follower_cpp/launch/: bringup_with_aruco_and_gestures.launch.py
aruco_follower_cpp/src/: aruco_follower_node.cpp
driver_package/: setup.py
driver_package/driver_package/: send_home.py  send_home_old.py
driver_package/install/: local_setup.sh  setup.sh
driver_package/install/driver_package/lib/driver_package/: forward_until_distance  send_home
driver_package/install/driver_package/share/driver_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
driver_package/log/: latest_build
gesture-control-ros2/: README.md  package.xml  setup.cfg  setup.py
gesture-control-ros2/gesture_commands/: cam.py  hand_gesture_command.py
turtlebot3_lidar_follower/: package.xml  setup.cfg  setup.py
turtlebot3_lidar_follower/turtlebot3_lidar_follower/: lidar_follower.py
