<?xml version="1.0"?>
<package format="3">
  <name>driver_package</name>
  <version>0.0.0</version>
  <description>TurtleBot3 forward motion test node</description>
  <maintainer email="you@example.com">jsingh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
